fix descriptions overflowing

--- a/src/app/core/poll-page/poll-page.component.scss
+++ b/src/app/core/poll-page/poll-page.component.scss
@@ -2,15 +2,17 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    width: 100vw;
 
     form {
-        width: 80vw;
+        width: 80%;
         margin-left: auto;
         margin-right: auto;
 
         .description {
             font-style: italic;
             text-align: center;
+            word-wrap: break-word;
         }
 
         h2, h3 {
