--- a/src/app/shared/poll-preview/poll-preview.component.scss
+++ b/src/app/shared/poll-preview/poll-preview.component.scss
@@ -7,9 +7,17 @@ mat-card {
         margin-bottom: 1.1em;
     }
 
+    .card-header {
+        padding: 15px;
+    }
+
     .actions {
         display: flex;
         flex-wrap: wrap;
         gap: 10px;
+    }
+
+    .description {
+        word-wrap: break-word;
     }
 }
